Rapid Prd/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>BA_Is_the_business_type_considered_Luxur__c</fullName>
        <formula>if(ispickval(Business_Category__c,&quot;&quot;),&quot;&quot;,if(or(ispickval(Business_Category__c,&quot;Computer-Related Retail&quot;),
ispickval(Business_Category__c,&quot;Consumer Electronics&quot;),
ispickval(Business_Category__c,&quot;Furniture&quot;),
ispickval(Business_Category__c,&quot;Golf - Stores, Driving Ranges, Country Clubs&quot;),
ispickval(Business_Category__c,&quot;Health Club&quot;),
ispickval(Business_Category__c,&quot;Housing-Related&quot;),
ispickval(Business_Category__c,&quot;Jewelry&quot;),
ispickval(Business_Category__c,&quot;Limosine &amp; Transportation&quot;),
ispickval(Business_Category__c,&quot;Restaurant - Fine Dining&quot;),
ispickval(Business_Category__c,&quot;Maid and Cleaning Service&quot;),
ispickval(Business_Category__c,&quot;Music and Music Instrument&quot;),
ispickval(Business_Category__c,&quot;Tanning and Tattoo&quot;),
ispickval(Business_Category__c,&quot;Other Service Retail&quot;),
ispickval(Business_Category__c,&quot;Other Product Retail&quot;),
ispickval(Business_Category__c,&quot;Promotions &amp; Advertising&quot;),
ispickval(Business_Category__c,&quot;Automotive - Transmission&quot;)),&quot;Yes&quot;,&quot;No&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is the business type considered Luxury?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BA_Split_is_40__c</fullName>
        <label>Split is &gt;= 40%</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BA_Unqualified_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BOBA Unqualified Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BA_X2_years_in_business__c</fullName>
        <label>&lt; 2 years in business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BA_X2_years_of_credit_history__c</fullName>
        <label>&lt; 2 years of credit history</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BA_X9_months_remaining_on_the_lease__c</fullName>
        <label>&lt; 9 months remaining on the lease</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BOBA_Transfer_BA__c</fullName>
        <label>BOBA Transfer BA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOBA_Transfer_Date__c</fullName>
        <label>BOBA Transfer Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>B__c</fullName>
        <label>Business ZIP</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bad_Zip_Pool__c</fullName>
        <defaultValue>&quot;010, 	021, 	030, 	032, 	056, 	060, 	061, 	062, 	064, 	070, 	075, 	076, 	077, 	080, 	086, 	087, 	100, 	104, 	112, 	115, 	117, 	120, 	140, 	144, 	152, 	178, 	189, 	190, 	191, 	200, 	207, 	208, 	212, 	229, 	279, 	284, 	286, 	294, 	295, 	299, 	300, 	301, 	302, 	302, 	303, 	305, 	311, 	322, 	326, 	329, 	334, 	335, 	336, 	337, 	338, 	339, 	342, 	346, 	347, 	350, 	351, 	352, 	360, 	380, 	381, 	383, 	399, 	402, 	440, 	441, 	442, 	444, 	447, 	450, 	451, 	452, 	461, 	462, 	465, 	468, 	481, 	483, 	530, 	545, 	548, 	551, 	553, 	554, 	555, 	600, 	601, 	601, 	604, 	605, 	606, 	611, 	630, 	631, 	650, 	656, 	658, 	704, 	743, 	750, 	750, 	751, 	752, 	753, 	754, 	756, 	757, 	760, 	760, 	761, 	761, 	762, 	765, 	766, 	767, 	770, 	772, 	773, 	774, 	775, 	782, 	786, 	786, 	787, 	787, 	800, 	801, 	802, 	804, 	805, 	806, 	807, 	840, 	850, 	852, 	853, 	853, 	890, 	891, 	900, 	901, 	902, 	902, 	903, 	906, 	907, 	908, 	910, 	911, 	912, 	913, 	913, 	914, 	915, 	916, 	917, 	918, 	919, 	920, 	921, 	922, 	923, 	925, 	926, 	928, 	930, 	932, 935, 	936, 	939, 	945, 	946, 	947, 	950, 	951, 	953, 	960, 	961, 	973, 	981,  982, 	985&quot;</defaultValue>
        <label>Bad Zip Pool</label>
        <length>1300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Baker_flag__c</fullName>
        <formula>IF( ISNULL( Data_Entry_Date__c ) , 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Baker flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Begin_Activity_Monitoring_Days_Count__c</fullName>
        <formula>(TODAY()-Begin_Activity_Monitoring_Due_Date__c)-(NOW()- Begin_Activity_Monitoring__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Begin Activity Monitoring - Days Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Begin_Activity_Monitoring_Due_Date__c</fullName>
        <label>Begin Activity Monitoring Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Begin_Activity_Monitoring_Flag__c</fullName>
        <formula>IMAGE( 
IF(AND(ISNULL( Begin_Activity_Monitoring__c  ),  Begin_Activity_Monitoring_Due_Date__c  &lt; TODAY()), &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Priority Flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Begin Activity Monitoring Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Begin_Activity_Monitoring__c</fullName>
        <label>Begin Activity Monitoring</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Best_Number_To_Call__c</fullName>
        <label>Best Number To Call</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <formula>Account.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <formula>Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <formula>Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <formula>Account.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_ZIP__c</fullName>
        <formula>Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing ZIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Address__c</fullName>
        <formula>Account.BillingStreet &amp; BR() &amp;
Account.BillingCity &amp;&quot;, &quot; &amp; Account.BillingState &amp;&quot;, &quot;&amp; Account.BillingPostalCode &amp; BR() &amp;
Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Bank_Statements__c</fullName>
        <label>Business Bank Statements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NA RENEWAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Bankruptcies__c</fullName>
        <label>Business Bankruptcies:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Category__c</fullName>
        <inlineHelpText>If updated with new category, add similar to &quot;What type of Business is it?&quot; in UW Object.</inlineHelpText>
        <label>Business Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Antiques/Collectibles</fullName>
                </value>
                <value>
                    <fullName>Appliance Stores</fullName>
                </value>
                <value>
                    <fullName>Arrangements</fullName>
                </value>
                <value>
                    <fullName>Art Galleries</fullName>
                </value>
                <value>
                    <fullName>Audio Equipment</fullName>
                </value>
                <value>
                    <fullName>Automobile Dealerships New/Used</fullName>
                </value>
                <value>
                    <fullName>Automotive - Body Repair, Collision, Painting</fullName>
                </value>
                <value>
                    <fullName>Automotive - Brake and Muffler</fullName>
                </value>
                <value>
                    <fullName>Automotive - General Repair, Truck, RV</fullName>
                </value>
                <value>
                    <fullName>Automotive - Parts, Accessories</fullName>
                </value>
                <value>
                    <fullName>Automotive - Quick Sevice, Lube, Tune-Up</fullName>
                </value>
                <value>
                    <fullName>Automotive - Tire, Glass</fullName>
                </value>
                <value>
                    <fullName>Automotive - Towing &amp; Emergency Road Service</fullName>
                </value>
                <value>
                    <fullName>Automotive - Transmission</fullName>
                </value>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>Barber Shop</fullName>
                </value>
                <value>
                    <fullName>Bicycle Repair</fullName>
                </value>
                <value>
                    <fullName>Bicycles/Motorcycles Shops</fullName>
                </value>
                <value>
                    <fullName>Bicycle Sales</fullName>
                </value>
                <value>
                    <fullName>Billing Services</fullName>
                </value>
                <value>
                    <fullName>Boating/Marina</fullName>
                </value>
                <value>
                    <fullName>Book and Stationary</fullName>
                </value>
                <value>
                    <fullName>Bowling</fullName>
                </value>
                <value>
                    <fullName>Bridal Shop</fullName>
                </value>
                <value>
                    <fullName>Car Alarm Supplier</fullName>
                </value>
                <value>
                    <fullName>Carpet Store</fullName>
                </value>
                <value>
                    <fullName>Car Wash</fullName>
                </value>
                <value>
                    <fullName>Catering</fullName>
                </value>
                <value>
                    <fullName>Check Cashing Companies</fullName>
                </value>
                <value>
                    <fullName>Cigar Cigarette &amp; Tobacco Dealer-Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Info__c</fullName>
        <formula>&quot;Address:&quot;&amp; BR() 
&amp; Account.BillingStreet &amp; BR() 
&amp; Account.BillingCity &amp;&quot;, &quot;&amp; Account.BillingState &amp;&quot; &quot;&amp; Account.BillingPostalCode &amp; BR() &amp; BR() 
&amp; &quot;Business Phone: &quot;&amp; Account.Phone &amp; BR() 
&amp; &quot;Fax: &quot;&amp; Account.Fax &amp; BR() 
&amp; &quot;Email: &quot;&amp; Account.Email_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Information__c</fullName>
        <formula>&quot;Legal Name: &quot;&amp;  Account.Legal_Name__c &amp; BR() 
&amp; &quot;DBA Name: &quot;&amp;  Account.Name   &amp; BR() &amp; BR() 
&amp; &quot;Address:&quot;&amp; BR() 
&amp;  Account.BillingStreet  &amp; BR() 
&amp;  Account.BillingCity  &amp;&quot;, &quot;&amp;  Account.BillingState  &amp;&quot; &quot;&amp; Account.BillingPostalCode  &amp; BR() &amp; BR() 
&amp; &quot;Phone: &quot;&amp;  Account.Phone  &amp; BR() 
&amp; &quot;Fax: &quot;&amp; Account.Fax &amp; BR() 
&amp; &quot;Best Number to Call: &quot;&amp;  Best_Number_To_Call__c   &amp; BR()
&amp; &quot;Email: &quot;&amp;  Account.Email_Address__c  &amp; &quot; &quot;&amp; BR() &amp; BR()
&amp; &quot;Federal Tax ID: &quot; &amp; Account.FederalTaxID__c &amp; &quot; &quot; &amp; BR() &amp; BR()
&amp; &quot;Number of Businesses Included In Advance: &quot;&amp;   text(Account.Number_of_Locations__c)  &amp; BR() 
&amp; &quot;Number of Terminals at Location: &quot;&amp;   text( Account.Number_of_Terminals_at_Location__c )  &amp; BR() &amp; BR()
&amp; &quot;Business Open Date: &quot;&amp; text(Account.DateBusinessStarted__c)  &amp; BR() 
&amp; &quot;Owned Business Since: &quot;&amp; text(Account.Owned_Business_Since__c)  &amp; BR() &amp; BR() 
&amp; &quot;Does the Merchant Own the Building: &quot;&amp;  text(Account.Does_the_Merchant_Own_the_Building__c)  &amp; BR() 
&amp; &quot;Landlord/Agent Name: &quot;&amp;  Account.Landlord_Agent_Name__c &amp; BR() 
&amp; &quot;Landlord/Agent Phone: &quot;&amp;  Account.Landlord_Agent_Phone__c &amp; BR() 
&amp; &quot;Time Remaining on Site Lease/Mortgage: &quot;&amp;  Account.Time_Remaining_On_Lease__c  &amp; BR() &amp; BR() 
&amp; &quot;Federal or State Tax Liens?: &quot;&amp;  text(Account.Federal_or_State_Tax_Liens__c) &amp; BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Judgements__c</fullName>
        <label>Business Judgements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>$1-$25k</fullName>
                </value>
                <value>
                    <fullName>$25k-$50k</fullName>
                </value>
                <value>
                    <fullName>$50k-$75k</fullName>
                </value>
                <value>
                    <fullName>$75k and Above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Name_On_Check_Reference__c</fullName>
        <label>Business Name On Check Reference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Legal Name</fullName>
                </value>
                <value>
                    <fullName>DBA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Open_Date__c</fullName>
        <formula>Account.DateBusinessStarted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Updated From Account Business Open Date Field</inlineHelpText>
        <label>Business Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Open_Tax_Lien_Payment_Plan__c</fullName>
        <label>Business Open Tax Lien Payment Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Open_Tax_Lien_Type__c</fullName>
        <label>Business Open Tax Lien Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>State &amp; Federal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Open_Tax_Liens__c</fullName>
        <label>Business Tax Liens Outstanding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>$1-$25k</fullName>
                </value>
                <value>
                    <fullName>$25k-$50k</fullName>
                </value>
                <value>
                    <fullName>$50k-$75k</fullName>
                </value>
                <value>
                    <fullName>$75k and Above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Phone_Ext__c</fullName>
        <formula>Account.Phone_Ext__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Phone Ext</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Phone_Phone_Ext__c</fullName>
        <label>Business Phone Ext</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Phone_Phone__c</fullName>
        <label>Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <formula>HYPERLINK(&quot;javascript:sendCTIMessage(%27/CLICK_TO_DIAL?DN=&quot;&amp;Account.Phone&amp;&quot;&amp;ID=&amp;&quot;&amp; AccountId &amp;&quot;&amp;ENTITY_NAME=Account%27)&quot;,Account.Phone,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Status__c</fullName>
        <label>Business Status:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dissolved</fullName>
                </value>
                <value>
                    <fullName>Good Standing</fullName>
                </value>
                <value>
                    <fullName>Not Available</fullName>
                </value>
                <value>
                    <fullName>Not In good Standing</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Canada Not Available</fullName>
                </value>
                <value>
                    <fullName>Delinquent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Tax_Lien_Date_Filed__c</fullName>
        <inlineHelpText>If entering a single date use the format: &quot;MM/DD/YYYY&quot;
If entering multiple dates use a semicolon &apos;;&apos; and a space &apos; &apos; to seperate the dates. E.G.: &quot;MM/DD/YYYY; MM/DD/YYYY; MM/DD/YYYY....&quot;</inlineHelpText>
        <label>Date(s) Lien Filed</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Voided_Check__c</fullName>
        <label>Business Voided Check</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NA RENEWAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_name_check_match_contract__c</fullName>
        <label>Business name on check match contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CALC_FICO__c</fullName>
        <description>FICO (or other) score uploaded by CALC after credit pull</description>
        <label>CALC FICO</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALC_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://calc.rapidadvance.com/calculator/opportunity?id=&quot;&amp;CASESAFEID(Id),&quot;CALC Link&quot;)</formula>
        <label>CALC Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CALC_Link_plaintext__c</fullName>
        <formula>&quot;https://calc.rapidadvance.com/calculator/opportunity?id=&quot;&amp;CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALC Link (plaintext)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Business_Ownership_Confirmed__c</fullName>
        <label>Confirmed principal owner(s) in Westlaw?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Unable To Confirm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Character_Alert_Count__c</fullName>
        <formula>if(ispickval(  CH_Business_Ownership_Confirmed__c , &quot;No&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Character Alert Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRR</label>
        <referenceTo>Credit_Related_Reporting__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calculate_Due_Dates__c</fullName>
        <label>Calculate Due Dates</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Calculator_Variance__c</fullName>
        <formula>1-( QC_Calculator_Average__c / AE_Calculator_Average__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculator Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Calculator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calculator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Owner_Additional_Email__c</fullName>
        <description>For sending BD notifications; set via workflow</description>
        <label>Campaign Owner Additional Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Campaign_Owner_Email__c</fullName>
        <description>For sending BD notifications; set via workflow</description>
        <label>Campaign Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Campaign_Tier_1__c</fullName>
        <label>Campaign_Tier_1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Tier_2__c</fullName>
        <label>Campaign_Tier_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Tier_4__c</fullName>
        <label>Campaign_Tier_4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <formula>CASE(Campaign.Type ,
            &quot;Partners&quot;, &quot;Partners&quot;, 
            &quot;Internet&quot;, &quot;Internet&quot;, 
            &quot;Lead Source&quot;, &quot;Lead Source&quot;,
            &quot;Rapid Advance Internal Campaign&quot;
)</formula>
        <label>Campaign Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_name__c</fullName>
        <label>Campaign name</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not the Direct Mail Incentive Card has been activated</description>
        <label>Card Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Card_Types_Selected_by_UW__c</fullName>
        <formula>if(or( Visa_MC__c),&quot;Visa,MC&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Card Types Selected by UW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Logic_for_Reporting__c</fullName>
        <description>The new Channel Logic</description>
        <formula>if ( AND
	(datevalue(CreatedDate)  &gt; date(2016,02,08), 
	(text(LeadSource) = &quot;Referral&quot;), 
	or(	Owner.UserRole.Name = &quot;Junior Partner Account Executive&quot;,
		Owner.UserRole.Name = &quot;Senior Partner Account Executive&quot;, 
                Owner.UserRole.Name = &quot;Partner Account Executive&quot;)),
                &quot;Partner&quot;,

if ( AND
	(datevalue(CreatedDate)  &gt; date(2014,07,30), 
	(text(LeadSource) = &quot;Referral&quot;), 
	or(	Opportunity_Owner_Name__c = &quot;Ryan Dearborn&quot;,
		Opportunity_Owner_Name__c = &quot;Devin Delany&quot;,
		Opportunity_Owner_Name__c = &quot;Brendan McBride&quot;,
		Opportunity_Owner_Name__c = &quot;Charles Wagner&quot;,
		Opportunity_Owner_Name__c = &quot;Peter Havenstein&quot;,
		Opportunity_Owner_Name__c = &quot;Alexander Perla&quot;,
		Opportunity_Owner_Name__c = &quot;Jason Perkins&quot;,
                Opportunity_Owner_Name__c = &quot;Luke Drayer&quot;,
                Opportunity_Owner_Name__c = &quot;Luke Watson&quot;,
                Opportunity_Owner_Name__c = &quot;Julio Arjona&quot;,
                Opportunity_Owner_Name__c = &quot;Jarrett McKiney&quot;)),&quot;Partner&quot;,

if ( AND
	(datevalue(CreatedDate)  &gt; date(2014,07,30), 
	(  Campaign.Name    = &quot;Referral Initial Campaign&quot;), 
	or(	Opportunity_Owner_Name__c = &quot;Ryan Dearborn&quot;,
		Opportunity_Owner_Name__c = &quot;Devin Delany&quot;,
		Opportunity_Owner_Name__c = &quot;Brendan McBride&quot;,
		Opportunity_Owner_Name__c = &quot;Charles Wagner&quot;,
		Opportunity_Owner_Name__c = &quot;Peter Havenstein&quot;,
		Opportunity_Owner_Name__c = &quot;Alexander Perla&quot;,
		Opportunity_Owner_Name__c = &quot;Jason Perkins&quot;,
                Opportunity_Owner_Name__c = &quot;Luke Drayer&quot;,
                Opportunity_Owner_Name__c = &quot;Luke Watson&quot;,
                Opportunity_Owner_Name__c = &quot;Julio Arjona&quot;,
                Opportunity_Owner_Name__c = &quot;Jarrett McKiney&quot;)),&quot;Partner&quot;,

if (PrimaryCampaignSource__c   = &quot;*Partner100%PaidRenewals*&quot;,&quot;Partner&quot;,

if (PrimaryCampaignSource__c  = &quot;*Direct100%PaidRenewals*&quot;,&quot;Direct&quot;,

if (CONTAINS(  PrimaryCampaignSource__c , &quot;Office Depot -&quot;),&quot;Partner&quot;, 
if(Campaign.Name=&quot;NAV (formerly Creditera)&quot;,&quot;Partner&quot;,
if ( text(LeadSource) = &quot;Partner&quot;,&quot;Partner&quot;,
if( CONTAINS(  PrimaryCampaignSource__c , &quot;Fundera&quot;),&quot;Partner&quot;,

if(text(LeadSource) = &quot;eApplication&quot;,&quot;Partner&quot;,&quot;Direct&quot;))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Logic for Reporting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Funding_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Funding Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Account_Paid_Off_Letter_Sent__c</fullName>
        <label>Closed Account Paid Off Letter Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Reason__c</fullName>
        <label>Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bad Landlord Reference</fullName>
                </value>
                <value>
                    <fullName>Business for sale</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t pay off current advance</fullName>
                </value>
                <value>
                    <fullName>Closed for the season</fullName>
                </value>
                <value>
                    <fullName>Confirmed Fraud</fullName>
                </value>
                <value>
                    <fullName>Derogatory Business Report</fullName>
                </value>
                <value>
                    <fullName>Derogatory Credit</fullName>
                </value>
                <value>
                    <fullName>Gas Co does processing</fullName>
                </value>
                <value>
                    <fullName>Going out of business</fullName>
                </value>
                <value>
                    <fullName>High Chargeback Ratio</fullName>
                </value>
                <value>
                    <fullName>High Risk Business Type</fullName>
                </value>
                <value>
                    <fullName>Home based business</fullName>
                </value>
                <value>
                    <fullName>Inconsistent or Fluctuating Processing History</fullName>
                </value>
                <value>
                    <fullName>Insufficient Time on Lease</fullName>
                </value>
                <value>
                    <fullName>Limited Experience as Owner</fullName>
                </value>
                <value>
                    <fullName>Merchant withdrew</fullName>
                </value>
                <value>
                    <fullName>Negative SIte Inspection</fullName>
                </value>
                <value>
                    <fullName>No Credit Score</fullName>
                </value>
                <value>
                    <fullName>No Proof of Ownership</fullName>
                </value>
                <value>
                    <fullName>No statements</fullName>
                </value>
                <value>
                    <fullName>Not enough time in business</fullName>
                </value>
                <value>
                    <fullName>Not enough V/MC volume</fullName>
                </value>
                <value>
                    <fullName>Open bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Tender-shift Risk or Too Few Transactions</fullName>
                </value>
                <value>
                    <fullName>Too expensive</fullName>
                </value>
                <value>
                    <fullName>Too few transactions</fullName>
                </value>
                <value>
                    <fullName>Uses Pay Pal</fullName>
                </value>
                <value>
                    <fullName>V/MC Too Much of Overall Business</fullName>
                </value>
                <value>
                    <fullName>Wanted more than max quote</fullName>
                </value>
                <value>
                    <fullName>Funded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>